fix: Fix overflow in `TilesCarousel.scss`

--- a/src/components/TitlesCarousel/TitlesCarousel.scss
+++ b/src/components/TitlesCarousel/TitlesCarousel.scss
@@ -5,7 +5,7 @@
 }
 
 .carousel {
-    overflow: hidden;
+    overflow: scroll;
     scroll-behavior: smooth;
     scrollbar-width: none;
     margin: 0 1em;
